--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 .terms { font-size: .9em; }
 .menu, .article-meta, footer { text-align: center; }
-.title { font-size: 1.1em; }
+.title { font-size: 1.1em; line-height: 1.2em; }
 footer a { text-decoration: none; }
 hr {
   border-style: dashed;
